added right content

--- a/libraries/notebook test.ipynb
+++ b/libraries/notebook test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1602b4fc",
    "metadata": {},
    "outputs": [
@@ -21,10 +21,11 @@
     }
    ],
    "source": [
-    "from libraries.fct import process\n",
+    "from libraries.valid_process_class import ColumnProcessor\n",
+    "from libraries.valid_process_class import StringColumnProcessor as scp\n",
     "\n",
-    "a = process(\"Vive le vent\")\n",
-    "print(a)"
+    "a = scp()\n",
+    "a.process(\"Vive le vent\")"
    ]
   }
  ],
