--- a/libraries/notebook test.ipynb
+++ b/libraries/notebook test.ipynb
@@ -2,107 +2,86 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1602b4fc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Correct'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Incorrect\n"
+     ]
     }
    ],
    "source": [
-    "from libraries.valid_process_class import ColumnProcessor\n",
     "from libraries.valid_process_class import StringColumnProcessor as scp\n",
     "\n",
     "a = scp()\n",
-    "a.process(\"Vive le vent\")\n",
-    "a.compare(\"Vive le vent\", \"Vive le vent\")"
+    "print(a.compare(a.process(\"Vive le vent\"), a.process(\"VIVEs le vent\")))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "b8d99b7c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'StringColumnNoisyProcessor' from 'libraries.valid_process_class' (c:\\Users\\meltr\\OneDrive\\Documents\\(APT2)\\D4\\STAGE\\github\\GenEval\\libraries\\libraries\\valid_process_class.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlibraries\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mvalid_process_class\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ColumnProcessor\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlibraries\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mvalid_process_class\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StringColumnNoisyProcessor \u001b[38;5;28;01mas\u001b[39;00m scnp\n\u001b[32m      4\u001b[39m a = scnp()\n\u001b[32m      5\u001b[39m a.process(\u001b[33m\"\u001b[39m\u001b[33mVive le vent\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'StringColumnNoisyProcessor' from 'libraries.valid_process_class' (c:\\Users\\meltr\\OneDrive\\Documents\\(APT2)\\D4\\STAGE\\github\\GenEval\\libraries\\libraries\\valid_process_class.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Incorrect\n"
      ]
     }
    ],
    "source": [
-    "from libraries.valid_process_class import ColumnProcessor\n",
     "from libraries.valid_process_class import StringColumnNoisyProcessor as scnp\n",
     "\n",
     "a = scnp()\n",
-    "a.process(\"Vive le vent\")\n",
-    "a.compare(\"Vive le vent\", \"VIVE le vent\")"
+    "print(a.compare(a.process(\"Vive le vent\"), a.process(\"VIVEvddfqhhrs le vent\")))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "6a9f5b9b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'KeywordListColumnProcessor' from 'libraries.valid_process_class' (c:\\Users\\meltr\\OneDrive\\Documents\\(APT2)\\D4\\STAGE\\github\\GenEval\\libraries\\libraries\\valid_process_class.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlibraries\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mvalid_process_class\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ColumnProcessor\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlibraries\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mvalid_process_class\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m KeywordListColumnProcessor \u001b[38;5;28;01mas\u001b[39;00m klp\n\u001b[32m      4\u001b[39m a = klp()\n\u001b[32m      5\u001b[39m a.process([\u001b[33m\"\u001b[39m\u001b[33mjamais\u001b[39m\u001b[33m\"\u001b[39m,\u001b[33m\"\u001b[39m\u001b[33msouvent\u001b[39m\u001b[33m\"\u001b[39m,\u001b[33m\"\u001b[39m\u001b[33mtoujours\u001b[39m\u001b[33m\"\u001b[39m])\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'KeywordListColumnProcessor' from 'libraries.valid_process_class' (c:\\Users\\meltr\\OneDrive\\Documents\\(APT2)\\D4\\STAGE\\github\\GenEval\\libraries\\libraries\\valid_process_class.py)"
-     ]
-    }
-   ],
-   "source": [
-    "from libraries.valid_process_class import ColumnProcessor\n",
-    "from libraries.valid_process_class import KeywordListColumnProcessor as klp\n",
-    "\n",
-    "a = klp()\n",
-    "a.process([\"jamais\",\"souvent\",\"toujours\"])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "19d6c2e0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Correct'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Incorrect\n"
+     ]
     }
    ],
    "source": [
-    "from libraries.valid_process_scnp import ColumnProcessor\n",
-    "from libraries.valid_process_scnp import StringColumnNoisyProcessor as scnp\n",
+    "from libraries.valid_process_class import NumericColumnProcessor as ncp\n",
     "\n",
-    "a = scnp()\n",
-    "a.process(\"Vive le vent\")\n",
-    "a.compare(\"Vive le vent\", \"Vive le vent\")"
+    "a = ncp()\n",
+    "print(a.compare(a.process(13), a.process(12)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c54281c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct\n"
+     ]
+    }
+   ],
+   "source": [
+    "from libraries.valid_class_3 import Ordered_List_of_Numbers_ColumnProcessor as olncp\n",
+    "\n",
+    "a = olncp()\n",
+    "print(a.compare(a.process(\"1,2,3,4\"), a.process(\"1,2,3,4\")))"
    ]
   }
  ],
