--- a/libraries/notebook test.ipynb
+++ b/libraries/notebook test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "1602b4fc",
    "metadata": {},
    "outputs": [
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "from libraries.valid_process_class import StringColumnProcessor as scp\n",
+    "from libraries.valid_class_3 import StringColumnProcessor as scp\n",
     "\n",
     "a = scp()\n",
     "print(a.compare(a.process(\"Vive le vent\"), a.process(\"VIVEs le vent\")))"
@@ -36,7 +36,7 @@
     }
    ],
    "source": [
-    "from libraries.valid_process_class import StringColumnNoisyProcessor as scnp\n",
+    "from libraries.valid_class_3 import StringColumnNoisyProcessor as scnp\n",
     "\n",
     "a = scnp()\n",
     "print(a.compare(a.process(\"Vive le vent\"), a.process(\"VIVEvddfqhhrs le vent\")))"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "19d6c2e0",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "from libraries.valid_process_class import NumericColumnProcessor as ncp\n",
+    "from libraries.valid_class_3 import NumericColumnProcessor as ncp\n",
     "\n",
     "a = ncp()\n",
     "print(a.compare(a.process(13), a.process(12)))\n"
