--- a/libraries/test_validation_lib.ipynb
+++ b/libraries/test_validation_lib.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "85d5ac37",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "from validation.valid_import_1 import dataframe_impl\n",
+    "from libraries.valid_import_1 import dataframe_impl\n",
     "#/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/info_extraction/validation/content/truth_table.xlsx\n",
     "#/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/info_extraction/validation/content/compared_table.xlsx\n",
     "\n",
@@ -79,12 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "de8a7fb5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from validation.valid_gloss_2 import sort_data\n",
+    "from libraries.valid_gloss_2 import sort_data\n",
     "\n",
     "sort_data(table_truth, table_compared)"
    ]
@@ -99,12 +99,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4e691ec2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from validation.valid_class_3 import NumericColumnProcessor, StringColumnProcessor, StringNoisyColumnProcessor, List_of_Numbers_ColumnProcessor, Ordered_List_of_Numbers_ColumnProcessor, List_of_Strings_ColumnProcessor"
+    "from libraries.valid_class_3 import NumericColumnProcessor, StringColumnProcessor, StringNoisyColumnProcessor, List_of_Numbers_ColumnProcessor, Ordered_List_of_Numbers_ColumnProcessor, List_of_Strings_ColumnProcessor"
    ]
   },
   {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "665205ea",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
     }
    ],
    "source": [
-    "from validation.valid_columns_4 import define_columns\n",
+    "from libraries.valid_columns_4 import define_columns\n",
     "\n",
     "processors = define_columns(table_truth)\n",
     "print(\"\\nAssignation to each column :\")\n",
@@ -180,7 +180,7 @@
    "source": [
     "import pandas as pd\n",
     "from IPython.display import display\n",
-    "from validation.valid_comp_5 import comparison_storage\n",
+    "from libraries.valid_comp_5 import comparison_storage\n",
     "\n",
     "comparison_results, confusion_matrices = comparison_storage(table_truth, table_compared, processors)"
    ]
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "1bf6ffe4",
    "metadata": {},
    "outputs": [
@@ -531,7 +531,7 @@
    "source": [
     "import pandas as pd \n",
     "from IPython.display import display\n",
-    "from validation.valid_format_6 import results\n",
+    "from libraries.valid_format_6 import results\n",
     "\n",
     "combined_output, confusion_matrices_df = results(table_truth, table_compared, comparison_results, confusion_matrices)\n",
     "\n",
