--- a/libraries/test_validation_lib.ipynb
+++ b/libraries/test_validation_lib.ipynb
@@ -35,36 +35,19 @@
       "2              NaN  \n",
       "3  sh,ch,sch,th,ph  \n",
       "4              NaN  \n",
-      "5  OTRH,GJKO,hfhjz  \n",
-      "\n",
-      "Compared table: \n",
-      "          Nb       String  string noisy          list nb  ordered list nb  \\\n",
-      "0     3.00000         DFGE    dfgrhgfuy            9,6,7            6,9,7   \n",
-      "1   575.00000  je suis sat            x              NaN              NaN   \n",
-      "2    45.90000        à oui      sedrtyu          3,1,2,3            1,2,3   \n",
-      "3  1000.00000      OLALAla      ertyuaz  0,6,45,679.65,5  5,0,6,45,679.65   \n",
-      "4     0.84756            g      DEFRGHm    12,9876,0.2,4      12,9876,0.2   \n",
-      "5    34.00000      GgGgGzo          NaN              NaN              NaN   \n",
-      "\n",
-      "       list string  \n",
-      "0      hahaha,hehe  \n",
-      "1      a,b,c,d,e,f  \n",
-      "2              NaN  \n",
-      "3  sh,ch,sch,th,ph  \n",
-      "4              NaN  \n",
       "5  OTRH,GJKO,hfhjz  \n"
      ]
     }
    ],
    "source": [
-    "from libraries.valid_import_1 import dataframe_impl\n",
-    "#/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/info_extraction/validation/content/truth_table.xlsx\n",
-    "#/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/info_extraction/validation/content/compared_table.xlsx\n",
+    "from libraries.valid_import_1 import dataframe_impl, reading_tables\n",
+    "#/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/libraries/content/truth_table.xlsx\n",
+    "#/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/libraries/content/compared_table.xlsx\n",
     "\n",
-    "table_truth, table_compared = dataframe_impl(\"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/info_extraction/validation/content/truth_table.xlsx\",\"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/info_extraction/validation/content/compared_table.xlsx\")\n",
+    "table_truth, table_compared = reading_tables(\"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/libraries/content/truth_table.xlsx\",\"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/libraries/content/compared_table.xlsx\")\n",
     "\n",
     "print(f\"Truth table: \\n{table_truth}\")\n",
-    "print(f\"\\nCompared table: \\n{table_compared}\")"
+    "#print(f\"\\nCompared table: \\n{table_compared}\")"
    ]
   },
   {
@@ -79,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "de8a7fb5",
    "metadata": {},
    "outputs": [],
@@ -98,16 +81,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e691ec2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from libraries.valid_class_3 import NumericColumnProcessor, StringColumnProcessor, StringNoisyColumnProcessor, List_of_Numbers_ColumnProcessor, Ordered_List_of_Numbers_ColumnProcessor, List_of_Strings_ColumnProcessor"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "d8c9f9ec",
    "metadata": {},
@@ -117,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "665205ea",
    "metadata": {},
    "outputs": [
@@ -125,34 +98,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What type of processing ?\n",
-      "Choose from this table: \n",
+      "What type of processing for each column ?\n",
+      "Write a txt file via choosing from this table: \n",
       "Processing methods \n",
       "-------------------\n",
-      "1 - NumericColumnProcessor()\n",
-      "2 - StringColumnProcessor()\n",
-      "3 - StringNoisyColumnProcessor()\n",
-      "4 - List_of_Numbers_ColumnProcessor()\n",
-      "5 - Ordered_List_of_Numbers_ColumnProcessor()\n",
-      "6 - List_of_Strings_ColumnProcessor()\n",
-      "\n",
-      "Assignation to each column :\n",
-      "Nb : <validation.valid_class_3.NumericColumnProcessor object at 0x0000017FCAA619F0>\n",
-      "String : <validation.valid_class_3.StringColumnProcessor object at 0x0000017FCA9126C0>\n",
-      "string noisy : <validation.valid_class_3.StringNoisyColumnProcessor object at 0x0000017FCAA18290>\n",
-      "list nb : <validation.valid_class_3.List_of_Numbers_ColumnProcessor object at 0x0000017FCAA19370>\n",
-      "ordered list nb : <validation.valid_class_3.Ordered_List_of_Numbers_ColumnProcessor object at 0x0000017FCAA18050>\n",
-      "list string : <validation.valid_class_3.List_of_Strings_ColumnProcessor object at 0x0000017FCAA18CB0>\n"
+      "num - NumericColumnProcessor()\n",
+      "words - StringColumnProcessor()\n",
+      "words_not_exact - StringNoisyColumnProcessor()\n",
+      "list_num - List_of_Numbers_ColumnProcessor()\n",
+      "ordered_list_num - Ordered_List_of_Numbers_ColumnProcessor()\n",
+      "list_words - List_of_Strings_ColumnProcessor()\n",
+      "['Nb', 'String', 'string noisy', 'list nb', 'ordered list nb', 'list string']\n",
+      "['NumericColumnProcessor', 'StringColumnProcessor', 'StringNoisyColumnProcessor', 'List_of_Numbers_ColumnProcessor', 'Ordered_List_of_Numbers_ColumnProcessor', 'List_of_Strings_ColumnProcessor']\n",
+      "The manual attribution was taken into account.\n"
      ]
     }
    ],
    "source": [
-    "from libraries.valid_columns_4 import define_columns\n",
+    "#manual attribution\n",
+    "from libraries.valid_columns_4 import manual_process_for_columns_attribution\n",
     "\n",
-    "processors = define_columns(table_truth)\n",
-    "print(\"\\nAssignation to each column :\")\n",
-    "for key, value in processors.items():\n",
-    "    print(f\"{key} : {value}\")"
+    "attribution_file1 = \"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/libraries/content/manual_attribution_ex.txt\"\n",
+    "attribution_file2 = \"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/libraries/content/manual_counter_ex1.txt\"\n",
+    "attribution_file3 = \"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/libraries/content/manual_counter_ex2.txt\"\n",
+    "processors = manual_process_for_columns_attribution(table_truth, attribution_file1)\n",
+    "print(processors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5be5cfb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'pop from an empty set'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#automatic attribution\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlibraries\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mvalid_columns_4\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m automatic_process_for_columns_attribution, modify_attribution\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m processors = \u001b[43mautomatic_process_for_columns_attribution\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtable_truth\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(processors)\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# attribution = \"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/libraries/attribution.json\"\u001b[39;00m\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m# new_processors = modify_attribution(attribution)\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# print(new_processors)\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\meltr\\OneDrive\\Documents\\(APT2)\\D4\\STAGE\\github\\GenEval\\libraries\\libraries\\valid_columns_4.py:97\u001b[39m, in \u001b[36mautomatic_process_for_columns_attribution\u001b[39m\u001b[34m(table_truth)\u001b[39m\n\u001b[32m     95\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m part_types.pop() \u001b[38;5;129;01min\u001b[39;00m (\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28mfloat\u001b[39m):\n\u001b[32m     96\u001b[39m         types_in_column.add(\u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mint\u001b[39m])\n\u001b[32m---> \u001b[39m\u001b[32m97\u001b[39m     \u001b[38;5;28;01melif\u001b[39;00m \u001b[43mpart_types\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28mstr\u001b[39m:\n\u001b[32m     98\u001b[39m         types_in_column.add(\u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mstr\u001b[39m])\n\u001b[32m     99\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[31mKeyError\u001b[39m: 'pop from an empty set'"
+     ]
+    }
+   ],
+   "source": [
+    "#automatic attribution\n",
+    "from libraries.valid_columns_4 import automatic_process_for_columns_attribution, modify_attribution\n",
+    "\n",
+    "processors = automatic_process_for_columns_attribution(table_truth)\n",
+    "print(processors)\n",
+    "\n",
+    "# attribution = \"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/libraries/attribution.json\"\n",
+    "# new_processors = modify_attribution(attribution)\n",
+    "# print(new_processors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddb269df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#checking if list processor attribution works\n",
+    "from libraries.valid_columns_4 import automatic_process_for_columns_attribution\n",
+    "\n",
+    "pro = automatic_process_for_columns_attribution(table_truth)"
    ]
   },
   {
