--- a/libraries/test_validation_lib.ipynb
+++ b/libraries/test_validation_lib.ipynb
@@ -194,9 +194,9 @@
    "source": [
     "import pandas as pd\n",
     "from IPython.display import display\n",
-    "from libraries.valid_comp_5 import comparison_storage\n",
+    "from libraries.valid_comp_5 import comparison_init\n",
     "\n",
-    "comparison_results, confusion_matrices = comparison_storage(table_truth, table_compared, processors)"
+    "comparison_results, confusion_matrices = comparison_init(table_truth, table_compared, processors)"
    ]
   },
   {
