--- a/libraries/README
+++ b/libraries/README
@@ -26,7 +26,7 @@ This library is relevant if a bigger LLM extraction project is undertaken. You c
 
 ---
 
-## Functions - Application on a basic use case
+## Functions - Application to a basic use case
 ---
 
 ### 1. `reading_tables()`
@@ -34,6 +34,12 @@ This library is relevant if a bigger LLM extraction project is undertaken. You c
 ### 2. `sort_data()`
 
 ### 3. classes
+
+| Name of the class | Data type | Description |
+|-----|-----------|------------------------------------------------------------------------------------------------------------------------------|
+| NumericColumnProcessor | int, float | ? | StringColumnProcessor | str | ? | StringNoisyColumnProcessor | str | ? 
+| List_of_Numbers_ColumnProcessor | int, float | ? | Ordered_List_of_Numbers_ColumnProcessor | int, float | ? 
+| List_of_Strings_ColumnProcessor | str | ?
 
 ### 4.1. `manual_process_for_columns_attribution()`
 ### 4.2. `automatic_process_for_columns_attribution()`
@@ -43,7 +49,7 @@ This library is relevant if a bigger LLM extraction project is undertaken. You c
 
 ### 6. `results()`
 
+---
 
-
-## Possible use cases
+# Installation
 
