changed files name

--- a/validation_library/test_validation_lib.ipynb
+++ b/validation_library/test_validation_lib.ipynb
@@ -40,7 +40,7 @@
     }
    ],
    "source": [
-    "from libraries.valid_import_1 import dataframe_impl, reading_tables\n",
+    "from validation_package.load import dataframe_impl, reading_tables\n",
     "#/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/libraries/content/truth_table.xlsx\n",
     "#/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/libraries/content/compared_table.xlsx\n",
     "\n",
@@ -62,12 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "de8a7fb5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from libraries.valid_gloss_2 import sort_data\n",
+    "from validation_package.sort_and_glossary import sort_data\n",
     "\n",
     "sort_data(table_truth, table_compared)"
    ]
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "665205ea",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
    ],
    "source": [
     "#manual attribution\n",
-    "from libraries.valid_columns_4 import manual_process_for_columns_attribution\n",
+    "from validation_package.columns_attribution import manual_process_for_columns_attribution\n",
     "\n",
     "attribution_file1 = \"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/libraries/content/manual_attribution_ex.txt\"\n",
     "attribution_file2 = \"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/libraries/content/manual_counter_ex1.txt\"\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5be5cfb1",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
    ],
    "source": [
     "#automatic attribution\n",
-    "from libraries.valid_columns_4 import automatic_process_for_columns_attribution, modify_attribution\n",
+    "from validation_package.columns_attribution import automatic_process_for_columns_attribution, modify_attribution\n",
     "\n",
     "processors = automatic_process_for_columns_attribution(table_truth)\n",
     "print(processors)\n",
@@ -154,19 +154,6 @@
     "# attribution = \"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/libraries/attribution.json\"\n",
     "# new_processors = modify_attribution(attribution)\n",
     "# print(new_processors)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ddb269df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#checking if list processor attribution works\n",
-    "from libraries.valid_columns_4 import automatic_process_for_columns_attribution\n",
-    "\n",
-    "pro = automatic_process_for_columns_attribution(table_truth)"
    ]
   },
   {
@@ -194,7 +181,7 @@
    "source": [
     "import pandas as pd\n",
     "from IPython.display import display\n",
-    "from libraries.valid_comp_5 import comparison_init\n",
+    "from validation_package.comparison import comparison_init\n",
     "\n",
     "comparison_results, confusion_matrices = comparison_init(table_truth, table_compared, processors)"
    ]
@@ -545,7 +532,7 @@
    "source": [
     "import pandas as pd \n",
     "from IPython.display import display\n",
-    "from libraries.valid_format_6 import results\n",
+    "from validation_package.get_results import results\n",
     "\n",
     "combined_output, confusion_matrices_df = results(table_truth, table_compared, comparison_results, confusion_matrices)\n",
     "\n",
