updated validation with 3 new processors

--- a/use_case_tests/validator_default.ipynb
+++ b/use_case_tests/validator_default.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter your Google AI API key:  ········\n"
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f10d752f-e239-42c1-abc1-2a2feef3b4a6",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
     "# using col names of table1 for table 2; Attention: make sure order is the same!\n",
     "table2.columns = table1.columns\n",
     "\n",
-    "# Sorting the tables by 'Authors' column\n",
+    "# Sorting the tables by 'Filename' column\n",
     "table1_sorted = table1.sort_values(by=\"filename\").reset_index(drop=True)\n",
     "table2_sorted = table2.sort_values(by=\"filename\").reset_index(drop=True)\n",
     "\n",
